force-app/main/default/objects/User/fields/AM_Agencia__c.field-meta.xml
<CustomField>
    <fullName>AM_Agencia__c</fullName>
    <label>Vitrina</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTOCIPRES USAQUEN</fullName>
            </value>
            <value>
                <fullName>AUTOCIPRES 101</fullName>
            </value>
            <value>
                <fullName>AUTOCEIBA SUR</fullName>
            </value>
            <value>
                <fullName>AUTOCEIBA NORTE</fullName>
            </value>
            <value>
                <fullName>AUTOCEIBA CHIPICHAPE</fullName>
            </value>
            <value>
                <fullName>AUTOCEIBA</fullName>
            </value>
            <value>
                <fullName>AUTOCORAL</fullName>
            </value>
            <value>
                <fullName>AUTOPALMA</fullName>
            </value>
            <value>
                <fullName>AUTOGUAYACAN</fullName>
            </value>
            <value>
                <fullName>AUTOLAUREL CIRCUNVALAR</fullName>
            </value>
            <value>
                <fullName>AUTOLAUREL</fullName>
            </value>
            <value>
                <fullName>AUTOALMENDRO</fullName>
            </value>
            <value>
                <fullName>RENTING</fullName>
            </value>
            <value>
                <fullName>DISTRIBUIDOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>