force-app/main/default/objects/User/fields/AM_Concesionario__c.field-meta.xml
<CustomField>
    <fullName>AM_Concesionario__c</fullName>
    <description>Nombre del concesionario en el que trabaja el usuario.</description>
    <label>Agencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGENCIA AUTOCIPRES</fullName>
            </value>
            <value>
                <fullName>AGENCIA AUTOALMENDRO</fullName>
            </value>
            <value>
                <fullName>AGENCIA AUTOCORAL</fullName>
            </value>
            <value>
                <fullName>AGENCIA AUTOPALMA</fullName>
            </value>
            <value>
                <fullName>AGENCIA AUTOCEIBA</fullName>
            </value>
            <value>
                <fullName>AGENCIA AUTOLAUREL</fullName>
            </value>
            <value>
                <fullName>AGENCIA AUTOGUAYACAN</fullName>
            </value>
            <value>
                <fullName>RENTING TOTAL</fullName>
            </value>
            <value>
                <fullName>FANALCA</fullName>
            </value>
            <value>
                <fullName>DISTRIBUIDOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>