force-app/main/default/objects/User/fields/AM_Usuario_Sipres__c.field-meta.xml
<CustomField>
    <fullName>AM_Usuario_Sipres__c</fullName>
    <label>Usuario Sipres</label>
    <length>25</length>
    <type>Text</type>
</CustomField>