force-app/main/default/objects/User/fields/AO_BypassApex__c.field-meta.xml
<CustomField>
    <fullName>AO_BypassApex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass apex validation rules, if this field id cheeked validation rules will not execute.</description>
    <label>Bypass Apex</label>
    <type>Checkbox</type>
</CustomField>