force-app/main/default/objects/User/fields/Codigo_ERP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ERP__c</fullName>
    <label>Codigo ERP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>