force-app/main/default/objects/User/fields/Escalacion_1_Motos__c.field-meta.xml
<CustomField>
    <fullName>Escalacion_1_Motos__c</fullName>
    <label>Escalación 1 Motos</label>
    <relationshipName>En_escalacion_1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>