force-app/main/default/objects/User/fields/Escalacion_2_Motos__c.field-meta.xml
<CustomField>
    <fullName>Escalacion_2_Motos__c</fullName>
    <label>Escalación 2 Motos</label>
    <relationshipName>En_escalacion_2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>