force-app/main/default/objects/User/fields/Gerente_de_Concesionario__c.field-meta.xml
<CustomField>
    <fullName>Gerente_de_Concesionario__c</fullName>
    <label>Gerente de Concesionario</label>
    <relationshipName>Asesores</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>