force-app/main/default/objects/User/fields/Gerente_de_Zona__c.field-meta.xml
<CustomField>
    <fullName>Gerente_de_Zona__c</fullName>
    <label>Gerente de Zona</label>
    <relationshipName>Gerentes_Conc</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>