force-app/main/default/objects/User/fields/Notificacion_1_Autos__c.field-meta.xml
<CustomField>
    <fullName>Notificacion_1_Autos__c</fullName>
    <label>Notificación 1 Autos</label>
    <type>Email</type>
</CustomField>