force-app/main/default/objects/User/fields/Notificacion_2_Autos__c.field-meta.xml
<CustomField>
    <fullName>Notificacion_2_Autos__c</fullName>
    <label>Notificación 2 Autos</label>
    <type>Email</type>
</CustomField>