force-app/main/default/objects/User/fields/Oportunidades_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades_Objetivo__c</fullName>
    <label>Oportunidades Objetivo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>